<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  <string name="app_name">ExpListView</string>-->
    
    <string name="ip">192.168.0.101</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="app_name">DigiResta</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_menu">Select Category</string>
    <string name="city">City :</string>
    <string name="locality">Locality :</string>
    <string name="street">Street:</string>
    <string name="flat">Flat/House No :</string>
    <string name="mobile">Mobile No :</string>
    <string name="proceed">Proceed</string>
    <string name="restaurant_prompt">Choose a restaurant</string>
    <string name="Submit">Submit</string>
    
    <color name="brown">#f5f6da</color>
    <color name="darkbrown">#3C1414</color>

    <string-array name="restaurant_arrays">
        <item>Chutneys</item>
        <item>Dominoes</item>
        <item>Pizza Corner</item>
    </string-array>
    <string-array name="mycities">
        <item>Hyderabad</item>
        <item>Bangalore</item>
    </string-array>
    <string-array name="Hyderabad">
        <item>Gachibowli</item>
        <item>Jubilee Hills</item>
    </string-array>
    <string-array name="Bangalore">
        <item>Lalbagh</item>
        <item>Jp Nagar</item>
    </string-array>

    <string name="title_activity_my_new">MyNewActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_option">OptionActivity</string>

</resources>
    
    
    

