<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Cod" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
			<TextView
			android:id="@+id/textview1"
            android:layout_width="0px" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
           	android:text="@string/city"
			/>    
     		 <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0px"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            /> 
   </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">        
             	<TextView
			android:id="@+id/textview2"
            android:layout_width="0px" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
			android:text="@string/locality"
			/>
		<Spinner
 			 android:id="@+id/spinner2"
            android:layout_width="0px"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            />
     </LinearLayout>
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">        
          <TextView
			android:id="@+id/textview3"
            android:layout_width="0px" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
			android:text="@string/street"
			/>
		<EditText
 			 android:id="@+id/edittext1"
            android:layout_width="0px"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint=""
            />
     </LinearLayout>
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">        
          <TextView
			android:id="@+id/textview4"
            android:layout_width="0px" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
			android:text="@string/flat"
			/>
		<EditText
 			 android:id="@+id/edittext2"
            android:layout_width="0px"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint=""
            />
     </LinearLayout>
     <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">        
          <TextView
			android:id="@+id/textview5"
            android:layout_width="0px" 
            android:layout_weight="1"
            android:layout_height="wrap_content"
			android:text="@string/mobile"
			/>
		<EditText
 			 android:id="@+id/edittext3"
            android:layout_width="0px"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint=""
            />
     </LinearLayout>
		<Button
	    android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:text="@string/proceed"
	    />
</LinearLayout>
